--- a/data/desktop.metainfo.xml.in
+++ b/data/desktop.metainfo.xml.in
@@ -12,29 +12,29 @@
 
   <screenshots>
     <screenshot type="default">
-      <image>https://raw.githubusercontent.com/elementary/switchboard-plug-pantheon-shell/8.0.0/data/screenshot-wallpapers.png</image>
+      <image>https://raw.githubusercontent.com/elementary/settings-desktop/8.0.0/data/screenshot-wallpaper.png</image>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/elementary/switchboard-plug-pantheon-shell/8.0.0/data/screenshot-appearance.png</image>
+      <image>https://raw.githubusercontent.com/elementary/settings-desktop/8.0.0/data/screenshot-appearance.png</image>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/elementary/switchboard-plug-pantheon-shell/8.0.0/data/screenshot-text.png</image>
+      <image>https://raw.githubusercontent.com/elementary/settings-desktop/8.0.0/data/screenshot-text.png</image>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/elementary/switchboard-plug-pantheon-shell/8.0.0/data/screenshot-dock-panel.png</image>
+      <image>https://raw.githubusercontent.com/elementary/settings-desktop/8.0.0/data/screenshot-dock-panel.png</image>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/elementary/switchboard-plug-pantheon-shell/8.0.0/data/screenshot-multitasking.png</image>
+      <image>https://raw.githubusercontent.com/elementary/settings-desktop/8.0.0/data/screenshot-multitasking.png</image>
     </screenshot>
   </screenshots>
 
   <content_rating type="oars-1.1" />
 
   <url type="homepage">https://elementary.io/</url>
-  <url type="bugtracker">https://github.com/elementary/switchboard-plug-pantheon-shell/issues</url>
+  <url type="bugtracker">https://github.com/elementary/settings-desktop/issues</url>
   <url type="donation">https://elementary.io/get-involved#funding</url>
-  <url type="help">https://github.com/elementary/switchboard-plug-pantheon-shell/discussions</url>
-  <url type="translate">https://l10n.elementary.io/engage/switchboard/</url>
+  <url type="help">https://github.com/elementary/settings-desktop/discussions</url>
+  <url type="translate">https://l10n.elementary.io/engage/settings/</url>
 
   <developer id="org.elementaryos">
     <name>elementary, Inc.</name>
@@ -88,9 +88,9 @@
         </ul>
       </description>
       <issues>
-        <issue url="https://github.com/elementary/switchboard-plug-pantheon-shell/issues/153">Non-FHD images are stretched in the desktop images overview</issue>
-        <issue url="https://github.com/elementary/switchboard-plug-pantheon-shell/pull/309">Port to GTK4</issue>
-        <issue url="https://github.com/elementary/switchboard-plug-pantheon-shell/pull/382">change wallpaper for dark theme settings</issue>
+        <issue url="https://github.com/elementary/settings-desktop/issues/153">Non-FHD images are stretched in the desktop images overview</issue>
+        <issue url="https://github.com/elementary/settings-desktop/pull/309">Port to GTK4</issue>
+        <issue url="https://github.com/elementary/settings-desktop/pull/382">change wallpaper for dark theme settings</issue>
       </issues>
     </release>
 
@@ -106,8 +106,8 @@
         </ul>
       </description>
       <issues>
-        <issue url="https://github.com/elementary/switchboard-plug-pantheon-shell/issues/232">Operating system locked up when dock behavior drop down was open and password prompt opened</issue>
-        <issue url="https://github.com/elementary/switchboard-plug-pantheon-shell/issues/256">Dock: "Hide when" empty when the switch is disabled</issue>
+        <issue url="https://github.com/elementary/settings-desktop/issues/232">Operating system locked up when dock behavior drop down was open and password prompt opened</issue>
+        <issue url="https://github.com/elementary/settings-desktop/issues/256">Dock: "Hide when" empty when the switch is disabled</issue>
       </issues>
     </release>
 
@@ -124,8 +124,8 @@
         </ul>
       </description>
       <issues>
-        <issue url="https://github.com/elementary/switchboard-plug-pantheon-shell/issues/184">Add previous and next workspace hot corners</issue>
-        <issue url="https://github.com/elementary/switchboard-plug-pantheon-shell/issues/305">relocate the windows animation toggle to desktop appearances</issue>
+        <issue url="https://github.com/elementary/settings-desktop/issues/184">Add previous and next workspace hot corners</issue>
+        <issue url="https://github.com/elementary/settings-desktop/issues/305">relocate the windows animation toggle to desktop appearances</issue>
       </issues>
     </release>
 
