--- a/data/desktop.metainfo.xml.in
+++ b/data/desktop.metainfo.xml.in
@@ -43,6 +43,16 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.2.1" date="2025-11-03" urgency="medium">
+      <description>
+        <p>Other updates:</p>
+        <ul>
+          <li>Update dock style</li>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
+
     <release version="8.2.0" date="2025-05-16" urgency="medium">
       <description>
         <p>Other updates:</p>
